# warmup-desktop

./: .gitignore  LICENSE  README.md  package.json  pnpm-workspace.yaml
.github/workflows/: desktop-release.yml
tools/desktop/: README.md  package.json
tools/desktop/shell/: index.html  welcome.html
tools/desktop/sidecar/: build.mjs  entitlements.plist  package.json
tools/desktop/sidecar/src/: capture.ts
tools/desktop/src-tauri/: Cargo.toml  tauri.conf.json
tools/desktop/src-tauri/capabilities/: main.json  welcome.json
tools/desktop/src-tauri/permissions/: allow-capture-account.toml
tools/desktop/src-tauri/src/: lib.rs  main.rs
